--- a/Bike_share.ipynb
+++ b/Bike_share.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,13 +79,401 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "link = 'https://sc.jumpbikes.com/opendata/free_bike_status.json'  ## enter bikeshare data link here\n",
     "contents = single_query(link)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if 'station' in link:\n",
+    "    print('yes')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bike_data = pd.DataFrame(contents['data'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>bikes</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>{'bike_id': 'bike_20631', 'name': '0907', 'lon...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>{'bike_id': 'bike_23375', 'name': '1556', 'lon...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>{'bike_id': 'bike_23338', 'name': '1393', 'lon...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>{'bike_id': 'bike_23330', 'name': '1473', 'lon...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>{'bike_id': 'bike_20766', 'name': '0951', 'lon...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>{'bike_id': 'bike_20800', 'name': '0960', 'lon...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>{'bike_id': 'bike_21224', 'name': '0995', 'lon...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>{'bike_id': 'bike_20803', 'name': '0966', 'lon...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>{'bike_id': 'bike_20789', 'name': '0886', 'lon...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>{'bike_id': 'bike_23314', 'name': '1525', 'lon...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>{'bike_id': 'bike_20843', 'name': '0899', 'lon...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>{'bike_id': 'bike_21402', 'name': '1292', 'lon...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>{'bike_id': 'bike_21193', 'name': '0859', 'lon...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>{'bike_id': 'bike_23354', 'name': '1544', 'lon...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>{'bike_id': 'bike_21225', 'name': '1251', 'lon...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>{'bike_id': 'bike_23308', 'name': '1474', 'lon...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>{'bike_id': 'bike_20779', 'name': '0864', 'lon...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>{'bike_id': 'bike_21191', 'name': '0918', 'lon...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>{'bike_id': 'bike_23320', 'name': '1370', 'lon...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>{'bike_id': 'bike_20651', 'name': '0943', 'lon...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>{'bike_id': 'bike_23299', 'name': '1401', 'lon...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>{'bike_id': 'bike_23316', 'name': '1492', 'lon...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>{'bike_id': 'bike_23347', 'name': '1554', 'lon...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>{'bike_id': 'bike_23377', 'name': '1280', 'lon...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>{'bike_id': 'bike_23310', 'name': '1364', 'lon...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>{'bike_id': 'bike_20645', 'name': '0936', 'lon...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>{'bike_id': 'bike_20807', 'name': '1354', 'lon...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>{'bike_id': 'bike_21417', 'name': '1365', 'lon...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>{'bike_id': 'bike_21180', 'name': '1261', 'lon...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>{'bike_id': 'bike_21408', 'name': '1333', 'lon...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>77</th>\n",
+       "      <td>{'bike_id': 'bike_21272', 'name': '0977', 'lon...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>78</th>\n",
+       "      <td>{'bike_id': 'bike_21271', 'name': '1265', 'lon...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>79</th>\n",
+       "      <td>{'bike_id': 'bike_23269', 'name': '1355', 'lon...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>80</th>\n",
+       "      <td>{'bike_id': 'bike_20772', 'name': '0970', 'lon...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>81</th>\n",
+       "      <td>{'bike_id': 'bike_23305', 'name': '1400', 'lon...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>82</th>\n",
+       "      <td>{'bike_id': 'bike_23342', 'name': '1394', 'lon...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>83</th>\n",
+       "      <td>{'bike_id': 'bike_20647', 'name': '0938', 'lon...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>84</th>\n",
+       "      <td>{'bike_id': 'bike_20790', 'name': '0887', 'lon...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>85</th>\n",
+       "      <td>{'bike_id': 'bike_20767', 'name': '0956', 'lon...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>86</th>\n",
+       "      <td>{'bike_id': 'bike_23313', 'name': '1296', 'lon...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>87</th>\n",
+       "      <td>{'bike_id': 'bike_20801', 'name': '1590', 'lon...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>88</th>\n",
+       "      <td>{'bike_id': 'bike_21411', 'name': '1341', 'lon...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>89</th>\n",
+       "      <td>{'bike_id': 'bike_23344', 'name': '1574', 'lon...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>90</th>\n",
+       "      <td>{'bike_id': 'bike_21410', 'name': '1339', 'lon...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>91</th>\n",
+       "      <td>{'bike_id': 'bike_21188', 'name': '1315', 'lon...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>92</th>\n",
+       "      <td>{'bike_id': 'bike_21182', 'name': '1263', 'lon...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>93</th>\n",
+       "      <td>{'bike_id': 'bike_23281', 'name': '1285', 'lon...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>94</th>\n",
+       "      <td>{'bike_id': 'bike_23357', 'name': '1466', 'lon...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>95</th>\n",
+       "      <td>{'bike_id': 'bike_23304', 'name': '1398', 'lon...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>96</th>\n",
+       "      <td>{'bike_id': 'bike_20793', 'name': '0892', 'lon...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>97</th>\n",
+       "      <td>{'bike_id': 'bike_23296', 'name': '1479', 'lon...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>98</th>\n",
+       "      <td>{'bike_id': 'bike_21174', 'name': '0987', 'lon...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99</th>\n",
+       "      <td>{'bike_id': 'bike_23378', 'name': '0906', 'lon...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>100</th>\n",
+       "      <td>{'bike_id': 'bike_23326', 'name': '1299', 'lon...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>101</th>\n",
+       "      <td>{'bike_id': 'bike_23287', 'name': '1344', 'lon...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>102</th>\n",
+       "      <td>{'bike_id': 'bike_23323', 'name': '1557', 'lon...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>103</th>\n",
+       "      <td>{'bike_id': 'bike_21406', 'name': '1301', 'lon...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>104</th>\n",
+       "      <td>{'bike_id': 'bike_21405', 'name': '1300', 'lon...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>105</th>\n",
+       "      <td>{'bike_id': 'bike_23324', 'name': '1551', 'lon...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>106</th>\n",
+       "      <td>{'bike_id': 'bike_20841', 'name': '0954', 'lon...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>107 rows × 1 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                 bikes\n",
+       "0    {'bike_id': 'bike_20631', 'name': '0907', 'lon...\n",
+       "1    {'bike_id': 'bike_23375', 'name': '1556', 'lon...\n",
+       "2    {'bike_id': 'bike_23338', 'name': '1393', 'lon...\n",
+       "3    {'bike_id': 'bike_23330', 'name': '1473', 'lon...\n",
+       "4    {'bike_id': 'bike_20766', 'name': '0951', 'lon...\n",
+       "5    {'bike_id': 'bike_20800', 'name': '0960', 'lon...\n",
+       "6    {'bike_id': 'bike_21224', 'name': '0995', 'lon...\n",
+       "7    {'bike_id': 'bike_20803', 'name': '0966', 'lon...\n",
+       "8    {'bike_id': 'bike_20789', 'name': '0886', 'lon...\n",
+       "9    {'bike_id': 'bike_23314', 'name': '1525', 'lon...\n",
+       "10   {'bike_id': 'bike_20843', 'name': '0899', 'lon...\n",
+       "11   {'bike_id': 'bike_21402', 'name': '1292', 'lon...\n",
+       "12   {'bike_id': 'bike_21193', 'name': '0859', 'lon...\n",
+       "13   {'bike_id': 'bike_23354', 'name': '1544', 'lon...\n",
+       "14   {'bike_id': 'bike_21225', 'name': '1251', 'lon...\n",
+       "15   {'bike_id': 'bike_23308', 'name': '1474', 'lon...\n",
+       "16   {'bike_id': 'bike_20779', 'name': '0864', 'lon...\n",
+       "17   {'bike_id': 'bike_21191', 'name': '0918', 'lon...\n",
+       "18   {'bike_id': 'bike_23320', 'name': '1370', 'lon...\n",
+       "19   {'bike_id': 'bike_20651', 'name': '0943', 'lon...\n",
+       "20   {'bike_id': 'bike_23299', 'name': '1401', 'lon...\n",
+       "21   {'bike_id': 'bike_23316', 'name': '1492', 'lon...\n",
+       "22   {'bike_id': 'bike_23347', 'name': '1554', 'lon...\n",
+       "23   {'bike_id': 'bike_23377', 'name': '1280', 'lon...\n",
+       "24   {'bike_id': 'bike_23310', 'name': '1364', 'lon...\n",
+       "25   {'bike_id': 'bike_20645', 'name': '0936', 'lon...\n",
+       "26   {'bike_id': 'bike_20807', 'name': '1354', 'lon...\n",
+       "27   {'bike_id': 'bike_21417', 'name': '1365', 'lon...\n",
+       "28   {'bike_id': 'bike_21180', 'name': '1261', 'lon...\n",
+       "29   {'bike_id': 'bike_21408', 'name': '1333', 'lon...\n",
+       "..                                                 ...\n",
+       "77   {'bike_id': 'bike_21272', 'name': '0977', 'lon...\n",
+       "78   {'bike_id': 'bike_21271', 'name': '1265', 'lon...\n",
+       "79   {'bike_id': 'bike_23269', 'name': '1355', 'lon...\n",
+       "80   {'bike_id': 'bike_20772', 'name': '0970', 'lon...\n",
+       "81   {'bike_id': 'bike_23305', 'name': '1400', 'lon...\n",
+       "82   {'bike_id': 'bike_23342', 'name': '1394', 'lon...\n",
+       "83   {'bike_id': 'bike_20647', 'name': '0938', 'lon...\n",
+       "84   {'bike_id': 'bike_20790', 'name': '0887', 'lon...\n",
+       "85   {'bike_id': 'bike_20767', 'name': '0956', 'lon...\n",
+       "86   {'bike_id': 'bike_23313', 'name': '1296', 'lon...\n",
+       "87   {'bike_id': 'bike_20801', 'name': '1590', 'lon...\n",
+       "88   {'bike_id': 'bike_21411', 'name': '1341', 'lon...\n",
+       "89   {'bike_id': 'bike_23344', 'name': '1574', 'lon...\n",
+       "90   {'bike_id': 'bike_21410', 'name': '1339', 'lon...\n",
+       "91   {'bike_id': 'bike_21188', 'name': '1315', 'lon...\n",
+       "92   {'bike_id': 'bike_21182', 'name': '1263', 'lon...\n",
+       "93   {'bike_id': 'bike_23281', 'name': '1285', 'lon...\n",
+       "94   {'bike_id': 'bike_23357', 'name': '1466', 'lon...\n",
+       "95   {'bike_id': 'bike_23304', 'name': '1398', 'lon...\n",
+       "96   {'bike_id': 'bike_20793', 'name': '0892', 'lon...\n",
+       "97   {'bike_id': 'bike_23296', 'name': '1479', 'lon...\n",
+       "98   {'bike_id': 'bike_21174', 'name': '0987', 'lon...\n",
+       "99   {'bike_id': 'bike_23378', 'name': '0906', 'lon...\n",
+       "100  {'bike_id': 'bike_23326', 'name': '1299', 'lon...\n",
+       "101  {'bike_id': 'bike_23287', 'name': '1344', 'lon...\n",
+       "102  {'bike_id': 'bike_23323', 'name': '1557', 'lon...\n",
+       "103  {'bike_id': 'bike_21406', 'name': '1301', 'lon...\n",
+       "104  {'bike_id': 'bike_21405', 'name': '1300', 'lon...\n",
+       "105  {'bike_id': 'bike_23324', 'name': '1551', 'lon...\n",
+       "106  {'bike_id': 'bike_20841', 'name': '0954', 'lon...\n",
+       "\n",
+       "[107 rows x 1 columns]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bike_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
