first census features in featurization script

--- a/census_featurization.ipynb
+++ b/census_featurization.ipynb
@@ -593,10 +593,10 @@
     }
    ],
    "source": [
-    "for l in layers:\n",
-    "    blockgroupdf = geopandas.read_file('ACS_2016_5YR_BG_06_CALIFORNIA.gdb', driver='FileGDB', layer=l)\n",
-    "    print(l)\n",
-    "    print (blockgroupdf.columns)"
+    "# for l in layers:\n",
+    "#     blockgroupdf = geopandas.read_file('ACS_2016_5YR_BG_06_CALIFORNIA.gdb', driver='FileGDB', layer=l)\n",
+    "#     print(l)\n",
+    "#     print (blockgroupdf.columns)"
    ]
   },
   {
@@ -882,7 +882,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [
     {
@@ -916,7 +916,7 @@
        "      <th>utc_time_end</th>\n",
        "      <th>local_time_start</th>\n",
        "      <th>day_of_week</th>\n",
-       "      <th>gets_pickedup_charged</th>\n",
+       "      <th>...</th>\n",
        "      <th>gets_pickedup_not_charged</th>\n",
        "      <th>in_charger</th>\n",
        "      <th>next_action</th>\n",
@@ -926,6 +926,7 @@
        "      <th>GEOID_Data</th>\n",
        "      <th>pop_density</th>\n",
        "      <th>people_per_house</th>\n",
+       "      <th>time_of_day</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -941,7 +942,7 @@
        "      <td>2018-10-23 20:13:57+00:00</td>\n",
        "      <td>2018-10-23 12:26:39-07:00</td>\n",
        "      <td>1</td>\n",
-       "      <td>False</td>\n",
+       "      <td>...</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>rented</td>\n",
@@ -951,6 +952,7 @@
        "      <td>15000US060871003001</td>\n",
        "      <td>3.369729e+05</td>\n",
        "      <td>3.000000</td>\n",
+       "      <td>12</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>59</th>\n",
@@ -964,7 +966,7 @@
        "      <td>2018-10-23 21:19:34+00:00</td>\n",
        "      <td>2018-10-23 13:28:01-07:00</td>\n",
        "      <td>1</td>\n",
-       "      <td>False</td>\n",
+       "      <td>...</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>rented</td>\n",
@@ -974,6 +976,7 @@
        "      <td>15000US060871003001</td>\n",
        "      <td>3.369729e+05</td>\n",
        "      <td>3.000000</td>\n",
+       "      <td>13</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>39</th>\n",
@@ -987,7 +990,7 @@
        "      <td>2018-10-23 21:43:08+00:00</td>\n",
        "      <td>2018-10-23 14:37:55-07:00</td>\n",
        "      <td>1</td>\n",
-       "      <td>False</td>\n",
+       "      <td>...</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>rented</td>\n",
@@ -997,6 +1000,7 @@
        "      <td>15000US060871007002</td>\n",
        "      <td>1.557911e+06</td>\n",
        "      <td>1.520000</td>\n",
+       "      <td>14</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
@@ -1010,7 +1014,7 @@
        "      <td>2018-10-25 03:24:54+00:00</td>\n",
        "      <td>2018-10-24 18:11:07-07:00</td>\n",
        "      <td>2</td>\n",
-       "      <td>False</td>\n",
+       "      <td>...</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>rented</td>\n",
@@ -1020,6 +1024,7 @@
        "      <td>15000US060871006001</td>\n",
        "      <td>2.925184e+06</td>\n",
        "      <td>2.518519</td>\n",
+       "      <td>18</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>43</th>\n",
@@ -1033,7 +1038,7 @@
        "      <td>2018-10-25 04:00:04+00:00</td>\n",
        "      <td>2018-10-24 20:44:59-07:00</td>\n",
        "      <td>2</td>\n",
-       "      <td>False</td>\n",
+       "      <td>...</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>rented</td>\n",
@@ -1043,9 +1048,11 @@
        "      <td>15000US060871007002</td>\n",
        "      <td>1.557911e+06</td>\n",
        "      <td>1.520000</td>\n",
+       "      <td>20</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>5 rows × 21 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -1063,42 +1070,53 @@
        "14 2018-10-25 01:11:07+00:00 2018-10-25 03:24:54+00:00   \n",
        "43 2018-10-25 03:44:59+00:00 2018-10-25 04:00:04+00:00   \n",
        "\n",
-       "            local_time_start  day_of_week  gets_pickedup_charged  \\\n",
-       "58 2018-10-23 12:26:39-07:00            1                  False   \n",
-       "59 2018-10-23 13:28:01-07:00            1                  False   \n",
-       "39 2018-10-23 14:37:55-07:00            1                  False   \n",
-       "14 2018-10-24 18:11:07-07:00            2                  False   \n",
-       "43 2018-10-24 20:44:59-07:00            2                  False   \n",
+       "            local_time_start  day_of_week     ...       \\\n",
+       "58 2018-10-23 12:26:39-07:00            1     ...        \n",
+       "59 2018-10-23 13:28:01-07:00            1     ...        \n",
+       "39 2018-10-23 14:37:55-07:00            1     ...        \n",
+       "14 2018-10-24 18:11:07-07:00            2     ...        \n",
+       "43 2018-10-24 20:44:59-07:00            2     ...        \n",
        "\n",
-       "    gets_pickedup_not_charged  in_charger next_action  \\\n",
-       "58                      False       False      rented   \n",
-       "59                      False       False      rented   \n",
-       "39                      False       False      rented   \n",
-       "14                      False       False      rented   \n",
-       "43                      False       False      rented   \n",
+       "    gets_pickedup_not_charged  in_charger  next_action  \\\n",
+       "58                      False       False       rented   \n",
+       "59                      False       False       rented   \n",
+       "39                      False       False       rented   \n",
+       "14                      False       False       rented   \n",
+       "43                      False       False       rented   \n",
        "\n",
-       "                    geolocation ZONING  index_right           GEOID_Data  \\\n",
-       "58  POINT (-122.03416 36.98725)     IG        22602  15000US060871003001   \n",
-       "59  POINT (-122.03417 36.98733)     IG        22602  15000US060871003001   \n",
-       "39  POINT (-122.02437 36.97425)    CBD        11798  15000US060871007002   \n",
-       "14   POINT (-122.04056 36.9669)     CC        11788  15000US060871006001   \n",
-       "43  POINT (-122.02842 36.97576)    CBD        11798  15000US060871007002   \n",
+       "                    geolocation ZONING index_right           GEOID_Data  \\\n",
+       "58  POINT (-122.03416 36.98725)     IG       22602  15000US060871003001   \n",
+       "59  POINT (-122.03417 36.98733)     IG       22602  15000US060871003001   \n",
+       "39  POINT (-122.02437 36.97425)    CBD       11798  15000US060871007002   \n",
+       "14   POINT (-122.04056 36.9669)     CC       11788  15000US060871006001   \n",
+       "43  POINT (-122.02842 36.97576)    CBD       11798  15000US060871007002   \n",
        "\n",
-       "     pop_density  people_per_house  \n",
-       "58  3.369729e+05          3.000000  \n",
-       "59  3.369729e+05          3.000000  \n",
-       "39  1.557911e+06          1.520000  \n",
-       "14  2.925184e+06          2.518519  \n",
-       "43  1.557911e+06          1.520000  "
+       "     pop_density  people_per_house  time_of_day  \n",
+       "58  3.369729e+05          3.000000           12  \n",
+       "59  3.369729e+05          3.000000           13  \n",
+       "39  1.557911e+06          1.520000           14  \n",
+       "14  2.925184e+06          2.518519           18  \n",
+       "43  1.557911e+06          1.520000           20  \n",
+       "\n",
+       "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 137,
+     "execution_count": 144,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "geodf.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 143,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "geodf['time_of_day'] = geodf['local_time_start'].dt.hour"
    ]
   },
   {
@@ -1114,6 +1132,208 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 168,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.ensemble import GradientBoostingClassifier\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.model_selection import train_test_split"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 160,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "geodf = geodf.dropna()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 171,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = geodf[['batt_start', 'day_of_week', 'time_of_day', 'ZONING']]  #, 'pop_density', 'people_per_house']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 172,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = pd.get_dummies(X, columns=['ZONING'], prefix='zone')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 173,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 10480 entries, 58 to 11380\n",
+      "Data columns (total 35 columns):\n",
+      "batt_start      10480 non-null int64\n",
+      "day_of_week     10480 non-null int64\n",
+      "time_of_day     10480 non-null int64\n",
+      "zone_CB         10480 non-null uint8\n",
+      "zone_CBD        10480 non-null uint8\n",
+      "zone_CBD-E      10480 non-null uint8\n",
+      "zone_CC         10480 non-null uint8\n",
+      "zone_CD/R       10480 non-null uint8\n",
+      "zone_CN         10480 non-null uint8\n",
+      "zone_CT         10480 non-null uint8\n",
+      "zone_EA-20      10480 non-null uint8\n",
+      "zone_FP         10480 non-null uint8\n",
+      "zone_IG         10480 non-null uint8\n",
+      "zone_IG/PER     10480 non-null uint8\n",
+      "zone_IG/PER2    10480 non-null uint8\n",
+      "zone_OFR        10480 non-null uint8\n",
+      "zone_PA         10480 non-null uint8\n",
+      "zone_PF         10480 non-null uint8\n",
+      "zone_PF/PK      10480 non-null uint8\n",
+      "zone_PK         10480 non-null uint8\n",
+      "zone_PK/PF      10480 non-null uint8\n",
+      "zone_R-1-10     10480 non-null uint8\n",
+      "zone_R-1-5      10480 non-null uint8\n",
+      "zone_R-1-7      10480 non-null uint8\n",
+      "zone_RH         10480 non-null uint8\n",
+      "zone_RL         10480 non-null uint8\n",
+      "zone_RM         10480 non-null uint8\n",
+      "zone_RS-1A      10480 non-null uint8\n",
+      "zone_RS-2A      10480 non-null uint8\n",
+      "zone_RTA        10480 non-null uint8\n",
+      "zone_RTB        10480 non-null uint8\n",
+      "zone_RTC        10480 non-null uint8\n",
+      "zone_RTD        10480 non-null uint8\n",
+      "zone_RTE        10480 non-null uint8\n",
+      "zone_out        10480 non-null uint8\n",
+      "dtypes: int64(3), uint8(32)\n",
+      "memory usage: 655.0 KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "X.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 181,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y = geodf['idle_time'].dt.seconds"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 182,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 183,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lrmodel = LinearRegression()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 184,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LinearRegression(copy_X=True, fit_intercept=True, n_jobs=None,\n",
+       "         normalize=False)"
+      ]
+     },
+     "execution_count": 184,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lrmodel.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 185,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.06039331840904627"
+      ]
+     },
+     "execution_count": 185,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lrmodel.score(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 188,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gbmodel = GradientBoostingClassifier(min_samples_split=10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gbmodel.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "gbmodel.score(X_train, y_train)"
+   ]
   },
   {
    "cell_type": "code",
